--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,33 +1,17 @@
 {% if site.disqus %}
-<!--<div class="comments">-->
-	<!--<div id="disqus_thread"></div>-->
-	<!--<script type="text/javascript">-->
+<div class="comments">
+	<div id="disqus_thread"></div>
+	<script type="text/javascript">
 
-	    <!--var disqus_shortname = '{{ site.disqus }}';-->
+	    var disqus_shortname = '{{ site.disqus }}';
 
-	    <!--(function() {-->
-	        <!--var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;-->
-	        <!--dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';-->
-	        <!--(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);-->
-	    <!--})();-->
+	    (function() {
+	        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+	        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+	        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+	    })();
 
-	<!--</script>-->
-	<!--<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>-->
-<!--</div>-->
-<!-- 多说评论框 start -->
-<div class="ds-thread" data-thread-key="{{ page.id }}" data-title="{{ page.title }}" data-url="http://felixzz.github.io/{{ page.url }}"></div>
-<!-- 多说评论框 end -->
-<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
-<script type="text/javascript">
-	var duoshuoQuery = {short_name:"felixzz"};
-	(function() {
-		var ds = document.createElement('script');
-		ds.type = 'text/javascript';ds.async = true;
-		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-		ds.charset = 'UTF-8';
-		(document.getElementsByTagName('head')[0]
-		|| document.getElementsByTagName('body')[0]).appendChild(ds);
-	})();
-</script>
-<!-- 多说公共JS代码 end -->
+	</script>
+	<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</div>
 {% endif %}
