--- a/assets/css/pages/index.css
+++ b/assets/css/pages/index.css
@@ -1,7 +1,7 @@
 .home .banner,
 .home .site-header {
-    background: #4183c4;
-    color: #fff
+    /*background: #4183c4;*/
+    /*color: #fff*/
 }
 
 .home .banner .collection-head {
